<resources>
    <string name="app_name">Cartharsis</string>
</resources>
